etc/iptables.up.rules
# Generated by iptables-save v1.4.21 on Thu Jul 28 08:02:55 2016
*security
:INPUT ACCEPT [271:18180]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [185:23660]
COMMIT
# Completed on Thu Jul 28 08:02:55 2016
# Generated by iptables-save v1.4.21 on Thu Jul 28 08:02:55 2016
*raw
:PREROUTING ACCEPT [271:18180]
:OUTPUT ACCEPT [185:23660]
COMMIT
# Completed on Thu Jul 28 08:02:55 2016
# Generated by iptables-save v1.4.21 on Thu Jul 28 08:02:55 2016
*nat
:PREROUTING ACCEPT [1:40]
:INPUT ACCEPT [1:40]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Jul 28 08:02:55 2016
# Generated by iptables-save v1.4.21 on Thu Jul 28 08:02:55 2016
*mangle
:PREROUTING ACCEPT [271:18180]
:INPUT ACCEPT [271:18180]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [185:23660]
:POSTROUTING ACCEPT [185:23660]
COMMIT

# custom rule
# custom rule by nosun
*filter

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT

# Accepts all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allows all outbound traffic
-A OUTPUT -j ACCEPT

# office
-A INPUT -s 67.203.7.231/32 -p tcp -m tcp --dport 22 -j ACCEPT

# jump vps
-A INPUT -s 45.79.104.105/32 -p tcp -m tcp --dport 22 -j ACCEPT

# web port
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT

# allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Reject all other input

-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
# Completed on Thu Jul 28 08:02:55 2016
